src/css/homepage.css
.main {
    position: relative;
    height: 80vh;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
    background-color: black;
}

.background-img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 0;
    transition: opacity 3s ease-in-out;
    z-index: -1;
    pointer-events: none;
    filter: blur(0.5vh);
}

.visible {
    opacity: 0.75;
}

.hidden {
    opacity: 0;
}

.card {
    position: relative;
    z-index: 2;
    background-color: var(--ifm-color-primary-bg) ;
    border: 2px solid #f04d4d;
    box-shadow: 0 0 20px rgba(240, 77, 77, 0.4);
    padding: 48px;
    border-radius: 16px;
    max-width: 600px;
    width: 90%;
    text-align: center;
    animation: fadeInUp 1s ease;
}

@keyframes fadeInUp {
    from {
        opacity: 0;
        transform: translateY(30px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}


.red-glow {
    box-shadow: 0 0 32px rgba(189, 46, 44, 0.45);
}

.logo {
    width: 100px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
}

.title {
    font-size: 2.75rem;
    font-weight: 800;
    margin-bottom: 12px;
}

.red-text {
    background: linear-gradient(to right, #e31548, #cf1647);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.subtitle {
    font-size: 1.1rem;
    color: var(--ifm-color-primary-subtitle);
    margin-bottom: 32px;
}

.btn {
    width: 15vh;
    margin-top: 1vh;
    margin-left: auto;
    margin-right: auto;
    display: inline-block;
    padding: 12px 28px;
    background: #f04d4d;
    color: #fff;
    font-weight: bold;
    border: none;
    border-radius: 999px;
    font-size: 16px;
    cursor: pointer;
    transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.btn:hover {
    transform: scale(1.05);
    box-shadow: 0 0 16px #f04d4d;
    color: white;
    text-decoration: none;
}


.red-button {
    background: linear-gradient(to right, #be123c, #9f1239);
    box-shadow: 0 0 18px rgba(255, 7, 0, 0.4);
}

.red-button:hover {
    transform: scale(1.5);
    box-shadow: 0 0 24px rgba(253, 7, 0, 0.6);
}

.footer {
    height: 20vh;
}

.footer__copyright {
    padding-bottom: 10px;
}

